ajout d'une page et d'un style primitif

--- a/index.html
+++ b/index.html
@@ -2,9 +2,40 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nahel Delille - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<a> bienvenue sur mon portefolio </a>
+<header>
+    <h1>Nahel Delille</h1>
+    <p>Étudiant en BUT2</p>
+</header>
+
+<section id="about">
+    <h2>À propos de moi</h2>
+    <p> bonjour c'est nahel</p>
+</section>
+
+<section id="skills">
+    <h2>Compétences</h2>
+    <ul>
+        <li>HTML / CSS / JS</li>
+        <li>Git / GitHub</li>
+        <li>Frameworks (optionnel)</li>
+    </ul>
+</section>
+
+<section id="projects">
+    <h2>Projets</h2>
+    <div class="project-card">
+        <h3>Nom du projet</h3>
+        <p>Description courte + lien</p>
+    </div>
+</section>
+
+<footer>
+    <p>© 2025 Nahel Delille</p>
+</footer>
 </body>
 </html>
