barre de compétence simple

--- a/index.html
+++ b/index.html
@@ -19,10 +19,24 @@
 
 <section id="skills">
     <h2>Compétences</h2>
-    <ul>
-        <li>HTML / CSS / JS</li>
-        <li>Git / GitHub</li>
-        <li>Frameworks (optionnel)</li>
+        <p>HTML</p>
+            <div class="container">
+                <div class="skills html">95%</div>
+            </div>
+        <p>CSS</p>
+        <div class="container">
+            <div class="skills css">80%</div>
+        </div>
+
+        <p>JavaScript</p>
+        <div class="container">
+            <div class="skills js">65%</div>
+        </div>
+
+        <p>PHP</p>
+        <div class="container">
+            <div class="skills php">60%</div>
+        </div>
     </ul>
 </section>
 
